# minimal-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  official_example.py  pyproject.toml  t2i_example.sh
.github/workflows/: test.yml
app/: __init__.py  __main__.py  _messages.py  agent.py  bot.py  feishu.py  history.py  log_config.py  start-lark.sh  tools.py
dockerfiles/: Dockerfile  docker-compose.yml
requests_example/: it2i_request.sh  t2i_request.sh  t2t_request.sh
tests/: __init__.py  test_bot.py  test_history.py  test_shapes.py
