[project]
name = "minimal-agent"
version = "0.3.0"
description = "Minimal multimodal Feishu chatbot bridging an OpenAI-compatible endpoint and the Feishu Open Platform (lark-oapi WebSocket mode)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "lark-oapi>=1.4.8",
]

[project.scripts]
minimal-agent = "app.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = []
