[project]
name = "minimal-agent"
version = "0.3.0"
description = "Minimal multimodal Feishu chatbot bridging an OpenAI-compatible endpoint and the Feishu Open Platform (lark-oapi WebSocket mode)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "lark-oapi>=1.4.8",
]

[project.scripts]
minimal-agent = "app.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
# `app/lark-samples-main/` is upstream Feishu reference material that
# AGENTS.md treats as read-only and is never imported. Excluding it
# trims ~21 MB / 266 files from the built wheel.
exclude = ["app/lark-samples-main/**"]
include = ["app/py.typed"]

[dependency-groups]
dev = []
